# my-mlir-hello

./: CMakeLists.txt
hello-opt/: CMakeLists.txt  hello-opt.cpp
include/Hello/: CMakeLists.txt  HelloDialect.h  HelloDialect.td  HelloOps.h  HelloOps.td  HelloPasses.h
lib/Hello/: CMakeLists.txt  HelloDialect.cpp  HelloOps.cpp  LowerToLLVM.cpp
test/: hello_world.mlir
